--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.26",
