--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@storybook/addon-essentials": "^7.0.26",
     "@storybook/addon-interactions": "^7.0.26",
     "@storybook/addon-links": "^7.0.26",
+    "@storybook/addon-styling": "^1.3.4",
     "@storybook/blocks": "^7.0.26",
     "@storybook/builder-vite": "^7.0.26",
     "@storybook/react": "^7.0.26",
@@ -54,7 +55,7 @@
     "eslint-plugin-storybook": "^0.6.12",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.26",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.26",
