feat: 협업 지점 modal 추가

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_UPBRELLA_API_BASE_URL_DEV=http://dev-api.upbrella.co.kr
 VITE_UPBRELLA_API_BASE_URL_PROD=http=://api.upbrella.co.kr
+VITE_KAKAO_API_KEY=a0e42a8a3eb7ade84bb7fa9a80ff3521
