fix: 변경 사항 수정 및 client_id 분리

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_UPBRELLA_API_BASE_URL_DEV=http://dev-api.upbrella.co.kr
 VITE_UPBRELLA_API_BASE_URL_PROD=http=://api.upbrella.co.kr
+
+VITE_NAVER_MAP_API_CLIENT_ID=o6zrrodz08
