--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-modal-sheet": "^2.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.1",
     "swiper": "^10.0.4"
