--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -51,6 +51,7 @@ jobs:
           context: .
           push: true
           tags: latest
+          file: ./Dockerfile
 
       - name: Get latest ECS task definition
         id: get-latest-task-def
