--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -21,6 +21,12 @@ FROM nginx:alpine
 # Copy built app from the build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
+# 기본 nginx 설정 파일을 삭제한다. (custom 설정과 충돌 방지)
+RUN rm /etc/nginx/conf.d/default.conf
+
+# custom 설정파일을 컨테이너 내부로 복사한다.
+COPY nginx/nginx.conf /etc/nginx/conf.d
+
 # Expose port 80
 EXPOSE 80
 
