--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -73,9 +73,14 @@ jobs:
           uses: aws-actions/amazon-ecr-login@v1
     
         - name: docker build and push
+          env:
+            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+            IMAGE_TAG: ${{ github.sha }}
           run: |
+            HASH=$(git log -1 --pretty=%h)
+            IMAGE_ID=$ECR_REGISTRY/$ECR_REPOSITORY:${HASH}
             echo ${{ secrets.DOCKER_TOKEN }} | docker login -u AWS --password-stdin 641876149891.dkr.ecr.ap-northeast-2.amazonaws.com
-            sudo docker buildx build --load --platform -t upbrella-ecr-front . -f ./.github/workflows/Dockerfile
+            sudo docker buildx build --load --platform linux/amd64 -t upbrella-ecr-front . -f ./.github/workflows/Dockerfile
             sudo docker tag upbrella-ecr-front:latest 641876149891.dkr.ecr.ap-northeast-2.amazonaws.com/upbrella-ecr-front:latest
             sudo docker push 641876149891.dkr.ecr.ap-northeast-2.amazonaws.com/upbrella-ecr-front:latest
           
