--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -77,7 +77,7 @@ jobs:
           run: echo "::set-output name=password::$(aws ecr get-login-password)"
           
         - name: Build & Push image
-          uses: docker/build-push-action@v1
+          uses: docker/build-push-action@v2
           with:
             registry: ${{ steps.login-ecr.outputs.registry }}
             repository: 641876149891.dkr.ecr.ap-northeast-2.amazonaws.com/upbrella-ecr-front
@@ -85,6 +85,7 @@ jobs:
             password: ${{ steps.get-ecr-password.outputs.password }}
             add_git_labels: true
             tag_with_ref: true
+            file: ./.github/workflows/Dockerfile
     
         # - name: docker build and push
         #   env:
