--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -77,7 +77,7 @@ jobs:
           run: echo "::set-output name=password::$(aws ecr get-login-password)"
           
         - name: Build & Push image
-          uses: docker/build-push-action@v2
+          uses: docker/build-push-action@v4
           with:
             registry: ${{ steps.login-ecr.outputs.registry }}
             repository: 641876149891.dkr.ecr.ap-northeast-2.amazonaws.com/upbrella-ecr-front
@@ -86,6 +86,7 @@ jobs:
             add_git_labels: true
             tag_with_ref: true
             file: ./.github/workflows/Dockerfile
+            push: true
     
         # - name: docker build and push
         #   env:
