--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -73,7 +73,7 @@ jobs:
           uses: aws-actions/amazon-ecr-login@v1
 
         - name: Build & Push image
-          uses: docker/build-push-action@v2-build-push
+          uses: docker/build-push-action@v2
           with:
             registry: ${{ steps.login-ecr.outputs.registry }}
             repository: ${{ steps.login-ecr.outputs.registry }}/upbrella-ecr-front
