--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -76,10 +76,10 @@ jobs:
           uses: aws-actions/amazon-ecr-login@v1
 
         - name: Build & Push image
-          uses: docker/build-push-action@v2
+          uses: docker/build-push-action@v1
           with:
             registry: ${{ steps.login-ecr.outputs.registry }}
-            repository: ${{ steps.login-ecr.outputs.registry }}/upbrella-ecr-front
+            repository: upbrella-ecr-front
             add_git_labels: true
             tag_with_ref: true
             file: ./.github/workflows/Dockerfile
