--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -69,6 +69,7 @@ jobs:
             role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
 
         - name: Set up Docker Buildx
+          id: buildx
           uses: docker/setup-buildx-action@v1
     
         - name: Login to Amazon ECR
@@ -89,11 +90,12 @@ jobs:
             username: AWS
             password: ${{ steps.get-ecr-password.outputs.password }}  # temporary
             platforms: linux/amd64
-            tags: latest
+            tags: ${{ steps.login-ecr.outputs.registry }}/upbrella-ecr-front:latest
             push: true
-            dockerfile: ./.github/workflows/Dockerfile
-            
-    
+            file: ./.github/workflows/Dockerfile
+            builder: ${{ steps.buildx.outputs.name }}
+            context: .
+   
     
         - name: Get latest ECS task definition
           id: get-latest-task-def
