--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -8,7 +8,7 @@ on:
 env:
   working-directory: ./
   ECR_REPOSITORY: upbrella-ecr-front
-  ECS_SERVICE: upbrella-server
+  ECS_SERVICE: upbrella-web-service
   ECS_CLUSTER: upbrella-cluster
   CONTAINER_NAME: upbrella-server
 
