--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -10,7 +10,7 @@ env:
   ECR_REPOSITORY: upbrella-ecr-front
   ECS_SERVICE: upbrella-web-service
   ECS_CLUSTER: upbrella-cluster
-  CONTAINER_NAME: upbrella-server
+  CONTAINER_NAME: upbrella-web-server
 
 permissions:
   contents: read
