--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_UPBRELLA_API_BASE_URL_DEV=http://43.202.94.218:8080
 VITE_UPBRELLA_API_BASE_URL_PROD=http=://api.upbrella.co.kr
 VITE_NAVER_MAP_API_CLIENT_ID=o6zrrodz08
 VITE_KAKAO_MAP_API_KEY=a0e42a8a3eb7ade84bb7fa9a80ff3521
+ESLINT_NO_DEV_ERRORS=true
