--- a/.github/workflows/release-dev-ci-cd.yml
+++ b/.github/workflows/release-dev-ci-cd.yml
@@ -83,7 +83,7 @@ jobs:
           id: build-image
           with:
             platforms: linux/amd64
-            tags: ${{ steps.login-ecr.outputs.registry }}/upbrella-ecr-front:latest
+            tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
             push: true
             file: ./.github/workflows/Dockerfile
             builder: ${{ steps.buildx.outputs.name }}
@@ -102,7 +102,7 @@ jobs:
           with:
             task-definition: ${{ env.TASK_DEF_JSON }}
             container-name: ${{ env.CONTAINER_NAME }}
-            image: ${{ steps.login-ecr.outputs.registry }}/upbrella-ecr-front:latest
+            image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
     
         - name: Deploy Amazon ECS task definition
           uses: aws-actions/amazon-ecs-deploy-task-definition@v1
