--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -31,7 +31,7 @@ RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx/nginx.conf /etc/nginx/conf.d
 
 # Expose port 80
-EXPOSE 80 81
+EXPOSE 80
 
 # Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
