chore: push 조건에서 test branch 삭제

--- a/.github/workflows/release-ci-cd.yml
+++ b/.github/workflows/release-ci-cd.yml
@@ -2,7 +2,7 @@ name: Web Server CI Script
 
 on:
   push:
-    branches: [ "release", "feat-160-front-aws-pipeline" ]
+    branches: [ "release" ]
 
 
 env:
