--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "vite --open --host 0.0.0.0 --port 3000",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --mode development",
+    "build:dev": "tsc && vite build --mode development",
+    "build:production": "tsc && vite build --mode production",
     "lint": "eslint src --ext ts,tsx --cache --max-warnings 0",
     "preview": "vite preview",
     "format": "prettier --cache --write .",
