--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -27,6 +27,19 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_FE }}
           aws-region: ${{ env.AWS_REGION }}
 
+      # Github Repository Secrets를 통해 .env 파일을 생성
+      - name: Generate Environment Variables File for Production
+        env:
+          VITE_UPBRELLA_API_BASE_URL: ${{ secrets.VITE_UPBRELLA_API_BASE_URL_DEV }}
+          VITE_NAVER_MAP_API_KEY: ${{ secrets.VITE_NAVER_MAP_API_KEY }}
+          VITE_KAKAO_MAP_API_KEY: ${{ secrets.VITE_KAKAO_MAP_API_KEY }}
+          VITE_KAKAO_LOGIN_REST_API_KEY: ${{ secrets.VITE_KAKAO_LOGIN_REST_API_KEY }}
+        run: |
+          echo "VITE_UPBRELLA_API_BASE_URL=${VITE_UPBRELLA_API_BASE_URL}" >> .env
+          echo "VITE_NAVER_MAP_API_KEY=${VITE_NAVER_MAP_API_KEY}" >> .env
+          echo "VITE_KAKAO_MAP_API_KEY=${VITE_KAKAO_MAP_API_KEY}" >> .env
+          echo "VITE_KAKAO_LOGIN_REST_API_KEY=${VITE_KAKAO_LOGIN_REST_API_KEY}" >> .env
+
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -51,7 +64,7 @@ jobs:
         working-directory: ${{ env.working-directory }}
 
       - name: Generate build
-        run: npm run build:dev
+        run: npm run build
         working-directory: ${{ env.working-directory }}
 
       - name: Upload to AWS S3
