--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-modal-sheet": "^2.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.1",
-    "swiper": "^10.0.4"
+    "swiper": "^10.0.4",
+    "vite-plugin-html": "^3.2.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.26",
