--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ server {
     error_log /var/log/nginx/error_api.log;
     location / {
         proxy_pass http://upbrella-private-alb-1830163209.ap-northeast-2.elb.amazonaws.com;
-        proxy_set_header Host $http_host;
+        proxy_set_header Host $host;
         proxy_set_header X-Nginx-Proxy true;
         proxy_redirect off;
         proxy_set_header X-Real-IP $remote_addr;
