--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@mui/material": "^5.13.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.6.2",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
