--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,14 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Nginx-Proxy true;
         proxy_redirect off;
-;         proxy_set_header X-Real-IP $remote_addr;
-;         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-NginX-Proxy true;
+        add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+        real_ip_header X-Forwarded-For;
+        real_ip_recursive on;
+        expires off;
+        access_log off;
+        charset utf-8;
     }
 }
