--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-modal-sheet": "^2.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.1",
+    "recoil": "^0.7.7",
     "swiper": "^10.0.4",
     "vite-plugin-html": "^3.2.0",
     "xlsx": "^0.18.5"
