--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -34,11 +34,13 @@ jobs:
       - name: Generate Environment Variables File for Production
         env:
           VITE_UPBRELLA_API_BASE_URL: ${{ secrets.VITE_UPBRELLA_API_BASE_URL_DEV }}
+          VITE_UPBRELLA_API_PROXY_URL: ${{ secrets.VITE_UPBRELLA_API_PROXY_URL }}
           VITE_NAVER_MAP_API_KEY: ${{ secrets.VITE_NAVER_MAP_API_KEY }}
           VITE_KAKAO_MAP_API_KEY: ${{ secrets.VITE_KAKAO_MAP_API_KEY }}
           VITE_KAKAO_LOGIN_REST_API_KEY: ${{ secrets.VITE_KAKAO_LOGIN_REST_API_KEY }}
         run: |
           echo "VITE_UPBRELLA_API_BASE_URL=${VITE_UPBRELLA_API_BASE_URL}" >> .env
+          echo "VITE_UPBRELLA_API_PROXY_URL=${VITE_UPBRELLA_API_PROXY_URL}" >> .env
           echo "VITE_NAVER_MAP_API_KEY=${VITE_NAVER_MAP_API_KEY}" >> .env
           echo "VITE_KAKAO_MAP_API_KEY=${VITE_KAKAO_MAP_API_KEY}" >> .env
           echo "VITE_KAKAO_LOGIN_REST_API_KEY=${VITE_KAKAO_LOGIN_REST_API_KEY}" >> .env
