--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-saver": "^2.0.5",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
