--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
