--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.3",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-modal-sheet": "^2.0.0",
