--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.13.6",
     "@types/file-saver": "^2.0.5",
     "@types/react-router-dom": "^5.3.3",
+    "@tanstack/react-query": "^4.0.10",
     "axios": "^1.4.0",
     "file-saver": "^2.0.5",
     "primeicons": "^6.0.1",
@@ -36,7 +37,6 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-modal-sheet": "^2.0.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.14.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
