--- a/.github/workflows/release-production.yml
+++ b/.github/workflows/release-production.yml
@@ -2,14 +2,10 @@ name: FE Production Deploy
 
 on:
   push:
-    branches: ["release"]
+    branches: ["chore/update-cicd"]
 
 env:
   working-directory: ./
-  ECR_REPOSITORY: upbrella-ecr-front
-  ECS_SERVICE: upbrella-web-service
-  ECS_CLUSTER: upbrella-cluster
-  CONTAINER_NAME: upbrella-web-server
   ESLINT_NO_DEV_ERRORS: true
 
 permissions:
@@ -79,50 +75,16 @@ jobs:
         run: npm run build
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v1
         with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-          role-session-name: GitHubActions
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build & Push image
-        uses: docker/build-push-action@v2
-        id: build-image
-        with:
-          platforms: linux/amd64
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
-          push: true
-          file: ./.github/workflows/Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          context: .
-
-      - name: Get latest ECS task definition
-        id: get-latest-task-def
+      - name: Upload to S3
         run: |
-          TASK_DEF=$(aws ecs describe-services --cluster ${ECS_CLUSTER} --services ${ECS_SERVICE} --region ${AWS_REGION} --query "services[0].taskDefinition" --output text)
-          aws ecs describe-task-definition --task-definition $TASK_DEF --region ${AWS_REGION} --query "taskDefinition" --output json > task-definition.json
-          echo "TASK_DEF_JSON=$(pwd)/task-definition.json" >> $GITHUB_ENV
+          aws s3 sync ./dist/ s3://${{ secrets.S3_BUCKET_NAME }} --region ${{ secrets.AWS_REGION }}
 
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: ${{ env.TASK_DEF_JSON }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
-
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+      - name: Invalidate CloudFront Cache
+        run: |
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
