chore: 배포 방법 변경
ecs 에서 cloudfront로 배포 변경

--- a/.github/workflows/release-production.yml
+++ b/.github/workflows/release-production.yml
@@ -2,7 +2,7 @@ name: FE Production Deploy
 
 on:
   push:
-    branches: ["chore/update-cicd"]
+    branches: ["release"]
 
 env:
   working-directory: ./
