--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "postinstall": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "postbuild": "react-snap"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -23,9 +24,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@tanstack/react-query": "^4.0.10",
     "@types/file-saver": "^2.0.5",
     "@types/react-router-dom": "^5.3.3",
-    "@tanstack/react-query": "^4.0.10",
     "axios": "^1.4.0",
     "file-saver": "^2.0.5",
     "primeicons": "^6.0.1",
@@ -35,6 +36,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
     "react-modal-sheet": "^2.0.0",
     "react-router-dom": "^6.14.1",
@@ -74,6 +76,7 @@
     "postcss": "^8.4.26",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
+    "react-snap": "^1.23.0",
     "storybook": "^7.0.26",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
@@ -91,5 +94,18 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "reactSnap": {
+    "source": "dist",
+    "include": [
+      "/",
+      "/about",
+      "/rentalLocation",
+      "/rentalOffice",
+      "/information",
+      "/info/tos",
+      "/info/pp",
+      "/contact"
+    ]
   }
 }
