--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "postinstall": "husky install",
-    "lint-staged": "lint-staged",
-    "postbuild": "react-snap"
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -76,7 +75,6 @@
     "postcss": "^8.4.26",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
-    "react-snap": "^1.23.0",
     "storybook": "^7.0.26",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
@@ -94,18 +92,5 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  },
-  "reactSnap": {
-    "source": "dist",
-    "include": [
-      "/",
-      "/about",
-      "/rentalLocation",
-      "/rentalOffice",
-      "/information",
-      "/info/tos",
-      "/info/pp",
-      "/contact"
-    ]
   }
 }
